Revert "Update smoketests script"
This reverts commit 470550d77dbc5724b249402a2aeda73fe11ac08c.